Folder voor images en Style

--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <title>Cor en Don / Connect & Go</title>
-    <link rel="stylesheet" type="text/css" href="Home.css">
+    <link rel="stylesheet" type="text/css" href="Css/Home.css">
 
 </head>
 <body>
@@ -96,27 +96,27 @@
 <div class="slideshow-container">
     <div class="mySlides fade">
         <div class="numbertext">1 / 5</div>
-        <img src="1.jpg" style="width:100%">
+        <img src="images/1.jpg" style="width:100%">
         <div class="text">Introductie</div>
     </div>
     <div class="mySlides fade">
         <div class="numbertext">2 / 5</div>
-        <img src="2.jpg" style="width:100%">
+        <img src="images/2.jpg" style="width:100%">
         <div class="text">Wat houdt het in?</div>
     </div>
     <div class="mySlides fade">
     <div class="numbertext">3 / 5</div>
-    <img src="3.jpg" style="width:100%">
+    <img src="images/3.jpg" style="width:100%">
     <div class="text">Oostenrijk</div>
 </div>
     <div class="mySlides fade">
         <div class="numbertext">4 / 5</div>
-        <img src="4.jpg" style="width:100%">
+        <img src="images/4.jpg" style="width:100%">
         <div class="text">Spanje</div>
     </div>
     <div class="mySlides fade">
         <div class="numbertext">5 / 5</div>
-        <img src="5.jpg" style="width:100%">
+        <img src="images/5.jpg" style="width:100%">
         <div class="text">Portugal</div>
     </div>
 </div>
