--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <title>Cor en Don / Connect & Go</title>
-    <link rel="stylesheet" type="text/css" href="Css/Home.css">
-
 </head>
 <body>
 
 <div class="topnav">
     <a class="#Homepage" href="#home">Home</a>
-    <a href="Business.html">Businesscase</a>
+    <a href="#Businesscase">Businesscase</a>
     <a href="#FunctionalRequirments">Functional Requirments</a>
     <a href="#NonFunctionalRequirments">Non Functional Requirments</a>
-    <a href="OnsTeam.html">Ons Team</a>
-
+    <a href="#OnsTeam">Ons Team</a>
 </div>
 
-
-
-</body>
-</html>
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
         * {box-sizing: border-box;}
         body {font-family: Verdana, sans-serif;}
         .mySlides {display: none;}
@@ -89,34 +77,33 @@
             .text {font-size: 11px}
         }
     </style>
-</head>
-<body>
+
 <h2></h2>
-<p>        </p><br><br> </p>
+<p>        </p><br><br> <p></p>
 <div class="slideshow-container">
-    <div class="mySlides fade">
+    <div class="mySlides fade" style="display: none;">
         <div class="numbertext">1 / 5</div>
-        <img src="images/1.jpg" style="width:100%">
+        <img src="1.jpg" style="width:100%">
         <div class="text">Introductie</div>
     </div>
-    <div class="mySlides fade">
+    <div class="mySlides fade" style="display: none;">
         <div class="numbertext">2 / 5</div>
-        <img src="images/2.jpg" style="width:100%">
+        <img src="2.jpg" style="width:100%">
         <div class="text">Wat houdt het in?</div>
     </div>
-    <div class="mySlides fade">
-    <div class="numbertext">3 / 5</div>
-    <img src="images/3.jpg" style="width:100%">
-    <div class="text">Oostenrijk</div>
-</div>
-    <div class="mySlides fade">
+    <div class="mySlides fade" style="display: block;">
+        <div class="numbertext">3 / 5</div>
+        <img src="3.jpg" style="width:100%">
+        <div class="text">Oostenrijk</div>
+    </div>
+    <div class="mySlides fade" style="display: none;">
         <div class="numbertext">4 / 5</div>
-        <img src="images/4.jpg" style="width:100%">
+        <img src="4.jpg" style="width:100%">
         <div class="text">Spanje</div>
     </div>
-    <div class="mySlides fade">
+    <div class="mySlides fade" style="display: none;">
         <div class="numbertext">5 / 5</div>
-        <img src="images/5.jpg" style="width:100%">
+        <img src="5.jpg" style="width:100%">
         <div class="text">Portugal</div>
     </div>
 </div>
@@ -124,10 +111,45 @@
 <div style="text-align:center">
     <span class="dot"></span>
     <span class="dot"></span>
-    <span class="dot"></span>
+    <span class="dot active"></span>
     <span class="dot"></span>
     <span class="dot"></span>
 </div>
+<h1>
+    Functionele eisen (MoSCoW)
+</h1>
+<p>
+    M: De gebruiker moet kunnen inloggen.<br>
+    M: De applicatie geeft een foutmelding als er gegevens worden ingevoerd die niet juist zijn.<br>
+    M: De gebruiker moet kunnen navigeren door middel van een menu.<br>
+    M: De gebruiker zou een foto moeten kunnen uploaden<br>
+    M: De gebruiker moet een account kunnen aanmaken<br>
+    M: De applicatie heeft de optie wachtwoord vergeten bij het inlogscherm.<br>
+    M: De gebruiker moet in staat zijn om via de website een bericht te versturen.<br>
+    M: De gebruiker moet in staat zijn om via de website andere gebruikers op te zoeken.<br>
+    M: In de applicatie moet een handleiding aanwezig zijn.<br>
+    M: De gebruiker moet beoordelingen kunnen maken over de website.<br>
+    M: De beoordelingen van de website moeten ook zichtbaar zijn, door middel van een link.<br>
+    M: De hoofdpagina van de website is over het doel van de website.<br>
+    M: In de applicatie moet een contactpagina zijn.<br><br></p>
+<p>
+
+    S: De gebruiker moet in staat zijn om persoonlijke informatie bij de profielpagina openbaar of privé te maken.<br>
+    S: De gebruiker moet in staat zijn om door middel van zoekcriteria ‘s gebruikers te filteren.<br>
+    S: De gebruiker moet in staat zijn om zowel in de Engelse als de Nederlandse taal de website te gebruiken.<br>
+    S: Er moeten geen fouten in het programma zitten.<br>
+    S: Er moet in de applicatie een pagina met favorieten zijn.<br>
+    S: De applicatie moet responsief zijn<br>
+    S: De gebruiker moet via een email bevestiging een account kunnen aanmaken.<br>
+    S: De applicatie moet goed beveiligd zijn.<br>
+    S: De applicatie moet in staat zijn statistieken te maken van hoeveel mensen de site bezoeken en contact proberen te
+    maken.<br>
+    S: De website moet er verzorgd en zakelijk uit zien.<br>
+    S: De applicatie zou het gevoel moeten geven dat het een Corendon website is.<br>
+    S: De gebruiker moet bij het zoeken op criteria het aantal gegeven gebruikers kunnen maximaliseren tot en met 50 of
+    minimaliseren.<br>
+    S: De applicatie moet in staat zijn om bij de zoekcriteria binnen een straal van 50 km gebruikers te filteren.
+</p>
 <script>
     var slideIndex = 0;
     showSlides();
@@ -150,8 +172,3 @@
 </script>
 </body>
 </html>
-
-
-
-
-
