--- a/Nonfunctional.html
+++ b/Nonfunctional.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>MoSCow non-functional</title>
-  <link href="Css/Nonscc.css" type="text/css" rel="stylesheet">
+  <link href="Css/Noncss.css" type="text/css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="Css/Home.css">
 </head>
 <body>
+
+  <div class="topnav">
+      <a class="#Homepage" href="Home.html">Home</a>
+      <a href="Business.html">Businesscase</a>
+      <a href="FunctionalRequirements.html">Functional Requirments</a>
+      <a href="Nonfunctional.html">Non Functional Requirments</a>
+      <a href="OnsTeam.html">Ons Team</a>
+  </div>
+
 <h1 class="center"> MoSCoW non functional requirements </h1>
 <div>
 <div>
