--- a/OnsTeam.html
+++ b/OnsTeam.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title> Cor en Don / Connect & Go</title>
-    <link rel="stylesheet" type="text/css" href="Css/stylecss.css"
+    <link rel="stylesheet" type="text/css" href="Css/stylecss.css">
+    <link rel="stylesheet" type="text/css" href="Css/Home.css">
 </head>
 <body id="myPage">
-<div class="topnav">
-    <a href="Home%20page.html">Home</a>
-    <a href="Businesscase">Businesscase</a>
-    <a href="#Functional Requirments">Functional Requirments</a>
-    <a href="#Non Functional Requirments"> Non Functional Requirments</a>
-    <a href="Ons%20Team.html">Ons Team</a>
-</div>
+
+  <div class="topnav">
+      <a class="#Homepage" href="Home.html">Home</a>
+      <a href="Business.html">Businesscase</a>
+      <a href="FunctionalRequirements.html">Functional Requirments</a>
+      <a href="Nonfunctional.html">Non Functional Requirments</a>
+      <a href="OnsTeam.html">Ons Team</a>
+  </div>
+
 <!-- Team Container -->
 <div class="teamContainer teamPadding teamCenter" id="team">
     <h2>Ons Team</h2>
