--- a/Business.html
+++ b/Business.html
@@ -2,16 +2,18 @@
 <html>
 <head>
     <title>Business Cases</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="Css/Home.css">
 </head>
 <body>
 
-<div>
-    <a class="#Homepage" href="home.html">Home</a>
-    <a href="#Business">Businesscase</a>
-    <a href="#FunctionalReq">Functional Requirments</a>
-    <a href="#NonFunctionalReq">Non Functional Requirments</a>
-    <a href="#Aboutus">Ons Team</a>
-</div>
+  <div class="topnav">
+      <a class="#Homepage" href="Home.html">Home</a>
+      <a href="Business.html">Businesscase</a>
+      <a href="FunctionalRequirements.html">Functional Requirments</a>
+      <a href="Nonfunctional.html">Non Functional Requirments</a>
+      <a href="OnsTeam.html">Ons Team</a>
+  </div>
 
 <div>
     <h1>Aanleiding</h1>
