--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -3,118 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Cor en Don / Connect & Go</title>
+    <link rel="stylesheet" type="text/css" href="Css/Home.css">
 </head>
 <body>
 
-<div class="topnav">
-    <a class="#Homepage" href="#home">Home</a>
-    <a href="#Businesscase">Businesscase</a>
-    <a href="#FunctionalRequirments">Functional Requirments</a>
-    <a href="#NonFunctionalRequirments">Non Functional Requirments</a>
-    <a href="#OnsTeam">Ons Team</a>
-</div>
+  <div class="topnav">
+      <a class="#Homepage" href="Home.html">Home</a>
+      <a href="Business.html">Businesscase</a>
+      <a href="FunctionalRequirements.html">Functional Requirments</a>
+      <a href="Nonfunctional.html">Non Functional Requirments</a>
+      <a href="OnsTeam.html">Ons Team</a>
+  </div>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-        * {box-sizing: border-box;}
-        body {font-family: Verdana, sans-serif;}
-        .mySlides {display: none;}
-        img {vertical-align: middle;}
-        /* Slideshow container */
-        .slideshow-container {
-            max-width: 1000px;
-            position: relative;
-            margin: auto;
-        }
-        /* Caption text */
-        .text {
-            color: #f2f2f2;
-            font-size: 15px;
-            padding: 8px 12px;
-            position: absolute;
-            bottom: 8px;
-            width: 100%;
-            text-align: center;
-        }
-        /* Number text (1/3 etc) */
-        .numbertext {
-            color: #f2f2f2;
-            font-size: 12px;
-            padding: 8px 12px;
-            position: absolute;
-            top: 0;
-        }
-        /* The dots/bullets/indicators */
-        .dot {
-            height: 15px;
-            width: 15px;
-            margin: 0 2px;
-            background-color: #bbb;
-            border-radius: 50%;
-            display: inline-block;
-            transition: background-color .6s ease;
-        }
-        .active {
-            background-color: #717171;
-        }
-        /* Fading animation */
-        .fade {
-            -webkit-animation-name: fade;89
-            -webkit-animation-duration: 7.5s;
-            animation-name: fade;
-            animation-duration: 1.5s;
-        }
-        @-webkit-keyframes fade {
-            from {opacity: .4}
-            to {opacity: 1}
-        }
-        @keyframes fade {
-            from {opacity: .4}
-            to {opacity: 1}
-        }
-        /* On smaller screens, decrease text size */
-        @media only screen and (max-width: 300px) {
-            .text {font-size: 11px}
-        }
-    </style>
 
-<h2></h2>
-<p>        </p><br><br> <p></p>
-<div class="slideshow-container">
-    <div class="mySlides fade" style="display: none;">
-        <div class="numbertext">1 / 5</div>
-        <img src="1.jpg" style="width:100%">
-        <div class="text">Introductie</div>
-    </div>
-    <div class="mySlides fade" style="display: none;">
-        <div class="numbertext">2 / 5</div>
-        <img src="2.jpg" style="width:100%">
-        <div class="text">Wat houdt het in?</div>
-    </div>
-    <div class="mySlides fade" style="display: block;">
-        <div class="numbertext">3 / 5</div>
-        <img src="3.jpg" style="width:100%">
-        <div class="text">Oostenrijk</div>
-    </div>
-    <div class="mySlides fade" style="display: none;">
-        <div class="numbertext">4 / 5</div>
-        <img src="4.jpg" style="width:100%">
-        <div class="text">Spanje</div>
-    </div>
-    <div class="mySlides fade" style="display: none;">
-        <div class="numbertext">5 / 5</div>
-        <img src="5.jpg" style="width:100%">
-        <div class="text">Portugal</div>
-    </div>
-</div>
-<br>
-<div style="text-align:center">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot active"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-</div>
 <h1>
     Functionele eisen (MoSCoW)
 </h1>
