--- a/OnsTeam.html
+++ b/OnsTeam.html
@@ -21,7 +21,8 @@
     <h2>Ons Team</h2>
     <p>Ontmoet ons team:</p>
 
-    <div class="namenBalk"><br>
+    <div class="namenBalk"><br>  </div>
+      <div class="namen">
 
         <div class="Naam1">
             <h3>Martin Antonov</h3>
@@ -47,8 +48,8 @@
         <div class="Naam6">
             <h3>Onur Ortaakarsuci</h3>
         </div>
+</div>
 
-    </div>
 </div>
 <!-- Afspraken -->
 <div class="onzeAfspraken" id="afspraken">
