--- a/Home.html
+++ b/Home.html
@@ -67,7 +67,7 @@
 <body>
 
 <div class="header">
-    <img src="Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
+    <img src="images/Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
 </div>
 
 <div class="topnav">
