voor functional requirements logo en navigatiebalk toegevoegd

--- a/FO.html
+++ b/FO.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Corendon - Connect &amp; Go</title>
     <title>Functional Requirements</title>
 
+    <link href="Css/Home.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
     <style>
-        /* spacing */
-
 table {
   table-layout: fixed;
   width: 100%;
@@ -31,10 +32,22 @@ thead th:nth-child(3) {
 th, td {
   padding: 20px;
 }
-    </style>
+</style>
 
 </head>
 <body>
+<div class="header">
+    <img src="images/Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
+</div>
+<div class="topnav">
+    <a href="#Homepage">Homepage</a>
+    <a href="#Businesscase">Businesscase</a>
+    <a href="#FunctionalRequirements">Functional Requirements</a>
+    <a href="#NonFunctionalRequirements">Non Functional Requirements</a>
+    <a href="#OurTeam">Ons Team</a>
+
+</div>
+
 <h2><strong>Inloggen</strong></h2>
 <table class="w3-table-all" style="table-layout: fixed">
     <thead>
