--- a/Business.html
+++ b/Business.html
@@ -4,51 +4,46 @@
     <title>Business Cases</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="Css/Home.css">
+    <link rel="stylesheet" type="text/css" href="Business1.css">
+
 </head>
 <body>
 
-  <div class="topnav">
-      <a class="#Homepage" href="Home.html">Home</a>
-      <a href="Business.html">Businesscase</a>
-      <a href="FunctionalRequirements.html">Functional Requirments</a>
-      <a href="Nonfunctional.html">Non Functional Requirments</a>
-      <a href="OnsTeam.html">Ons Team</a>
-  </div>
-
-<div>
-    <h1>Aanleiding</h1>
-    <p>De applicatie is bestemd voor reizigers die alleen reizen, als deze reizigers niet alleen willen reizen. Is dit een manier om reizigers toch de mogelijkheid te geven om samen te reizen en/of samen plannen te maken.</p>
+<div class="topnav">
+    <a class="#Homepage" href="Home.html">Home</a>
+    <a href="Business.html">Businesscase</a>
+    <a href="FunctionalRequirements.html">Functional Requirments</a>
+    <a href="Nonfunctional.html">Non Functional Requirments</a>
+    <a href="OnsTeam.html">Ons Team</a>
 </div>
 
-<div>
-    <h1>Aanpak</h1>
-    <ol>
-        <li>Het Fasten your seatbelt group 2 ontwikkelt een webapplicatie voor reizigers die draait op alle browsers. Deze applicatie zal worden gedistribueerd via Corendon.</li>
-        <li>De informatie in het wordt geleverd door de klanten door het registreren. Deze informatie zal niet toegankelijk zijn voor gebruikers zonder een inlog.</li>
-        <li>Er word een moderator account gemaakt om profielen te bekijken en/of gegevens te verwijderen</li>
-    </ol>
-</div>
+<article class="article1">
+<div >
 
-<div>
-    <h1>Verwachte resultaten</h1>
-    <ul style="list-style-type:square">
-        <li>Home pagina</li>
-        <li>Busines scase pagina</li>
-        <li>Functional Requirments pagina</li>
-        <li>Non Functional Requirments pagina</li>
-        <li>Ons Team pagina</li>
-    </ul>
-</div>
+    <div>
+        <h1>Risco's</h1>
+        <p>De belangrijkste risico’s voor het succes van dit project zijn:</p>
+        <ol>
+            <li> De kwaliteit van een zelf ontwikkelde applicatie: Bij distributie van instabiele software naar Corendon zal de negatieve impact op onze fys groep(hele hva) Dit risico zullen we afdekken door goed te testen</li>
+            <li> De stabiliteit en volwassenheid van de Open Mobility Interface in SIS: Omdat Oracle dezelfde interface gebruikt voor hun eigen applicatie mogen we vertrouwen op de stabiliteit hiervan.</li>
+                <li> Privacie van de reizigers data: De applicatie zal gebruik maken van een beveiligde database</li>
+            </ol>
+    </div>
 
-<div>
-    <h1>Risco's</h1>
-    <p>De belangrijkste risico’s voor het succes van dit project zijn:</p>
-    <ol>
-        <li> De kwaliteit van een zelf ontwikkelde applicatie: Bij distributie van instabiele software naar Corendon zal de negatieve impact op onze fys groep(hele hva) Dit risico zullen we afdekken door goed te testen</li>
-        <li> De stabiliteit en volwassenheid van de Open Mobility Interface in SIS: Omdat Oracle dezelfde interface gebruikt voor hun eigen applicatie mogen we vertrouwen op de stabiliteit hiervan.</li>
-        <li> Privacie van de reizigers data: De applicatie zal gebruik maken van een beveiligde database</li>
-    </ol>
-</div>
+    <div>
+        <h1>Alternatieven</h1>
+        <p>Wat zijn de alternatieve opties die wij kunnen gebruiken als wij dit project niet maken</p>
+        <ol>
+            <li>We nemen geen actie. De nadelen hiervan zijn:<br> Dat reiziger die alleen reizen alleen blijven.
+        </ol>
+    </div>
+    <div >
+        <h1>Planning</h1>
+        <p>Dit is de planning met de datas van wat er moet worden ingeleverd</p>
+        <img src="images/planning.png" width="100%" class="zoom">
 
+    </div>
+</div>
+</article>
 </body>
 </html>
