--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -40,12 +40,11 @@ th, td {
     <img src="images/Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
 </div>
 <div class="topnav">
-    <a href="#Homepage">Homepage</a>
-    <a href="#Businesscase">Businesscase</a>
-    <a href="#FunctionalRequirements">Functional Requirements</a>
-    <a href="#NonFunctionalRequirements">Non Functional Requirements</a>
-    <a href="#OurTeam">Ons Team</a>
-
+    <a class="#Homepage" href="Home.html">Home</a>
+    <a href="Business.html">Businesscase</a>
+    <a href="FunctionalRequirements.html">Functional Requirments</a>
+    <a href="Nonfunctional.html">Non Functional Requirments</a>
+    <a href="OnsTeam.html">Ons Team</a>
 </div>
 
 <h2><strong>Inloggen</strong></h2>
