--- a/Home.html
+++ b/Home.html
@@ -13,12 +13,11 @@
 </div>
 
 <div class="topnav">
-    <a href="#Homepage">Homepage</a>
-    <a href="#Businesscase">Businesscase</a>
-    <a href="#FunctionalRequirments">Functional Requirments</a>
-    <a href="#NonFunctionalRequirments">Non Functional Requirments</a>
-    <a href="#OurTeam">Ons Team</a>
-
+    <a class="#Homepage" href="Home.html">Home</a>
+    <a href="Business.html">Businesscase</a>
+    <a href="FunctionalRequirements.html">Functional Requirments</a>
+    <a href="Nonfunctional.html">Non Functional Requirments</a>
+    <a href="OnsTeam.html">Ons Team</a>
 </div>
 
 <div class="row">
