--- a/Business.html
+++ b/Business.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
-
+<div class="header">
+    <img src="images/Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
+</div>
 <div class="topnav">
     <a class="#Homepage" href="Home.html">Home</a>
     <a href="Business.html">Businesscase</a>
