--- a/OnsTeam.html
+++ b/OnsTeam.html
@@ -3,89 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <title> Cor en Don / Connect & Go</title>
-    <link rel="stylesheet" type="text/css" href="Css/stylecss.css">
-    <link rel="stylesheet" type="text/css" href="Css/Home.css">
+    <link rel="stylesheet" type="text/css" href="Css/Home.css"
 </head>
 <body id="myPage">
-
-  <div class="topnav">
-      <a class="#Homepage" href="Home.html">Home</a>
-      <a href="Business.html">Businesscase</a>
-      <a href="FunctionalRequirements.html">Functional Requirments</a>
-      <a href="Nonfunctional.html">Non Functional Requirments</a>
-      <a href="OnsTeam.html">Ons Team</a>
-  </div>
-
+<div class="header">
+    <img src="images/Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
+</div>
+<div class="topnav">
+    <a class="#Homepage" href="Home.html">Home</a>
+    <a href="Business.html">Businesscase</a>
+    <a href="FunctionalRequirements.html">Functional Requirments</a>
+    <a href="Nonfunctional.html">Non Functional Requirments</a>
+    <a href="OnsTeam.html">Ons Team</a>
+</div>
 <!-- Team Container -->
 <div class="teamContainer teamPadding teamCenter" id="team">
     <h2>Ons Team</h2>
     <p>Ontmoet ons team:</p>
 
-    <div class="namenBalk"><br>  </div>
-      <div class="namen">
+    <div class="namenBalk">
 
-        <div class="Naam1">
+        <div class="Naam">
             <h3>Martin Antonov</h3>
+            <img class="imgMartin" src="images/Martin.jpeg" alt="Avatar">
             <p>Voorzitter</p>
         </div>
 
-        <div class="Naam2">
+        <div class="Naam">
             <h3>Danial Iqbal</h3>
+            <img class="imgDanial" src="images/Danial.jpg" alt="Avatar">
         </div>
 
-        <div class="Naam3">
+        <div class="Naam">
             <h3>Anass Mortaki</h3>
+            <img class="img" src="images/Anass.jpg" alt="Avatar">
         </div>
 
-        <div class="Naam4">
+        <div class="Naam">
             <h3>Abbas Sardar</h3>
+            <img class="imgAbbas" src="images/Abbas.jpg" alt="Avatar">
         </div>
 
-        <div class="Naam5">
+        <div class="Naam">
             <h3>Jason Schermer</h3>
+            <img class="img" src="images/Jason.jpg" alt="Avatar">
         </div>
 
-        <div class="Naam6">
+        <div class="Naam">
             <h3>Onur Ortaakarsuci</h3>
+            <img class="img" src="images/Onur.jpg" alt="Avatar">
         </div>
-</div>
 
+    </div>
 </div>
 <!-- Afspraken -->
-<div class="onzeAfspraken" id="afspraken">
 
-    <div class="onzeAfspraken">
-        <h2 class="voorwaaardenAfspraken"><center>Voorwaarden/Afspraken</center></h2>
-        <p class="paragraaf"><center>Al onze voorwaarden/afspraken:</center></p>
-        <ol>
-            <li class="regel1">
-        Bij afwezigheid zonder geldige reden wordt er bij de eerste keer een waarschuwing gegeven. Bij herhaling van dit probleem wordt er per direct interne actie ondernomen. De projectvoorzitter (Martin Antonov) en  onze Loopbaan Adviseur (Anna Hoogenboom) worden op de hoogte gesteld van dit probleem. Martin Antonov en Anna Hoogenboom zullen uiteindelijk de consequentie bepalen. Mocht je een keer niet kunnen, is dit geen probleem. Zorg er wel voor dat dit tijdig aangekaart is bij het groepje (door middel van Whatsapp of Discord).
-            </li>
-            <li class="regel2">
-                Tijdens de FYS-Meeting op 7 September 2018 is er besproken dat Martin Antonov de voorzitter is van onze project groep. Hij is het aanspreekpunt van ons team. Als er onduidelijkheden, vragen of opmerkingen zijn dien je contact op te nemen met Martin over deze zaken. Hij zal met Anna Hoogenboom het directe aanspreekpunt voor ons groepje zijn.
-            </li>
-            <li class="regel3">
-                Je kunt ten alle tijden jouw problemen binnen de groep bespreekbaar maken. Eerlijkheid is een van de belangrijkste kernwaarden binnen ons groepje. Heb je een probleem met iemand uit een groepje? Is er thuis een probleem gaande? Voel je vrij om contact op te nemen met de groep.  Indien het een prive reden is, raden we aan om contact op te nemen met onze Loopbaan Adviseur (Anna Hoogenboom). We zullen gezamenlijk als groep (eventueel met behulp van Anna Hoogenboom) een oplossing zoeken voor het probleem.
-            </li>
-            <li class="regel4">
-                Elk teamlid dient zelfstandig zijn progressie bij te houden. De progressie dient openbaar genoteerd te worden via Trello. Je kunt onze pagina vinden via <a href="https://trello.com/b/3XIU4WW2/fasten-your-seatbelts-2018)">Trello</a>. Alle leden van dit project zijn toegevoegd en hebben toestemming om aantekeningen toe te voegen
-            </li>
-            <li class="regel5">
-                Elke week komen we minimaal een keer samen om onze voortgang te bespreken. Dit kan door middel van diverse middelen, denk aan: Discord, Google Hangout of een persoonlijke afspraak.
-            </li>
-            <li class="regel6">
-                Wanneer afspraken op een regelmatige basis niet nagekomen worden heeft het groepje recht om actie te ondernemen. In uitzonderlijke gevallen kan dit leiden tot verwijdering uit de groep.
-            </li>
-            <li class="regel7">
-                Alle teamleden verklaren door middel van het ondertekenen van dit samenwerkingscontract dat ieder individueel het minimale aantal aangegeven studie-uren aan dit project besteedt. Voor uitzonderlijke gevallen (ziekte/prive reden) kun je altijd contact opnemen met onze projectvoorzitter (Martin Antonov) of onze Loopbaan Adviseur (Anna Hoogenboom).
-            </li>
-        </ol>
-    </div>
-    <div>
-        <p></p>
-    </div>
-
+<div class="onzeAfspraken">
+    <h2 class="voorwaaardenAfspraken">Voorwaarden/Afspraken</h2>
+    <p class="paragraaf">Al onze voorwaarden/afspraken:</p>
+    <ol>
+        <li class="regel1">
+            Bij afwezigheid zonder geldige reden wordt er bij de eerste keer een waarschuwing gegeven. Bij herhaling van
+            dit probleem wordt er per direct interne actie ondernomen. De projectvoorzitter (Martin Antonov) en onze
+            Loopbaan Adviseur (Anna Hoogenboom) worden op de hoogte gesteld van dit probleem. Martin Antonov en Anna
+            Hoogenboom zullen uiteindelijk de consequentie bepalen. Mocht je een keer niet kunnen, is dit geen probleem.
+            Zorg er wel voor dat dit tijdig aangekaart is bij het groepje (door middel van Whatsapp of Discord).
+        </li>
+        <li class="regel2">
+            Tijdens de FYS-Meeting op 7 September 2018 is er besproken dat Martin Antonov de voorzitter is van onze
+            project groep. Hij is het aanspreekpunt van ons team. Als er onduidelijkheden, vragen of opmerkingen zijn
+            dien je contact op te nemen met Martin over deze zaken. Hij zal met Anna Hoogenboom het directe
+            aanspreekpunt voor ons groepje zijn.
+        </li>
+        <li class="regel3">
+            Je kunt ten alle tijden jouw problemen binnen de groep bespreekbaar maken. Eerlijkheid is een van de
+            belangrijkste kernwaarden binnen ons groepje. Heb je een probleem met iemand uit een groepje? Is er thuis
+            een probleem gaande? Voel je vrij om contact op te nemen met de groep. Indien het een prive reden is, raden
+            we aan om contact op te nemen met onze Loopbaan Adviseur (Anna Hoogenboom). We zullen gezamenlijk als groep
+            (eventueel met behulp van Anna Hoogenboom) een oplossing zoeken voor het probleem.
+        </li>
+        <li class="regel4">
+            Elk teamlid dient zelfstandig zijn progressie bij te houden. De progressie dient openbaar genoteerd te
+            worden via Trello. Je kunt onze pagina vinden via <a
+                href="https://trello.com/b/3XIU4WW2/fasten-your-seatbelts-2018)">Trello</a>. Alle leden van dit project
+            zijn toegevoegd en hebben toestemming om aantekeningen toe te voegen
+        </li>
+        <li class="regel5">
+            Elke week komen we minimaal een keer samen om onze voortgang te bespreken. Dit kan door middel van diverse
+            middelen, denk aan: Discord, Google Hangout of een persoonlijke afspraak.
+        </li>
+        <li class="regel6">
+            Wanneer afspraken op een regelmatige basis niet nagekomen worden heeft het groepje recht om actie te
+            ondernemen. In uitzonderlijke gevallen kan dit leiden tot verwijdering uit de groep.
+        </li>
+        <li class="regel7">
+            Alle teamleden verklaren door middel van het ondertekenen van dit samenwerkingscontract dat ieder
+            individueel het minimale aantal aangegeven studie-uren aan dit project besteedt. Voor uitzonderlijke
+            gevallen (ziekte/prive reden) kun je altijd contact opnemen met onze projectvoorzitter (Martin Antonov) of
+            onze Loopbaan Adviseur (Anna Hoogenboom).
+        </li>
+    </ol>
 </div>
+<div>
+    <p></p>
+</div>
+
 </body>
 
 
