--- a/OnsTeam.html
+++ b/OnsTeam.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="Css/Home.css"
 </head>
 <body id="myPage">
+<article>
 <div class="header">
     <img src="images/Cor1.jpg" alt="Het logo van het bedrijf" height="125" width="400">
 </div>
@@ -107,7 +108,7 @@
 <div>
     <p></p>
 </div>
-
+</article>
 </body>
 
 
