Lining home page

--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
     <a href="Nonfunctional.html">Non Functional Requirments</a>
     <a href="OnsTeam.html">Ons Team</a>
 </div>
-
+<article class="article1">
 <div class="row">
     <div class="column">
         <h2>Het Concept</h2>
@@ -58,6 +58,6 @@
 
     </div>
 
-
+</article>
 </body>
 </html>
