--- a/Home.html
+++ b/Home.html
@@ -26,7 +26,7 @@
         <p>Wij presenteren: Corendon – Connect & Go. Een gloednieuw platform ontworpen door Software Engineering studenten van de Hogeschool van Amsterdam.  Het doel van dit platform is om alleenstaande reizigers te verbinden met elkaar. Ons team is momenteel druk bezig met het ontwikkelen van deze website. Je kunt momenteel wel al een paar pagina’s vinden zoals: de homepage, de businesscase, de functional requirments, de non functional requirments en informatie over ons team. Op onze homepage kun je een introductie vinden over het project. In onze businesscase kun je ons plan van aanpak vinden. Bij de functional requirments kun je de functionele eisen van onze website vinden. Bij de non functional requirments kun je de niet functionele eisen van onze website vinden. Op onze teampagina kun je meer informatie over ons team vinden.</p>
     </div>
     <div class="column">
-        <h2>De Opdrachtomschrijving</h2>
+        <h2>Opdrachtomschrijving</h2>
         <p> Het aantal alleenstaanden in Nederland groeit hard. Zeventig jaar geleden telde Nederland
             285.000 alleenstaanden, inmiddels zijn dat er meer dan drie miljoen. Dat blijkt uit cijfers van
             het Centraal Bureau voor de Statistiek. De verwachting is dat in 2030 3,6 miljoen mensen
