--- a/OnsTeam.html
+++ b/OnsTeam.html
@@ -18,6 +18,7 @@
     <a href="OnsTeam.html">Ons Team</a>
 </div>
 <!-- Team Container -->
+    <article class="article1">
 <div class="teamContainer teamPadding teamCenter" id="team">
     <h2>Ons Team</h2>
     <p>Ontmoet ons team:</p>
@@ -31,7 +32,7 @@
         </div>
 
         <div class="Naam">
-            <h3>Danial Iqbal</h3>
+            <h3>Danial<br>Iqbal</h3>
             <img class="imgDanial" src="images/Danial.jpg" alt="Avatar">
         </div>
 
@@ -41,7 +42,7 @@
         </div>
 
         <div class="Naam">
-            <h3>Abbas Sardar</h3>
+            <h3>Abbas<br>Sardar</h3>
             <img class="imgAbbas" src="images/Abbas.jpg" alt="Avatar">
         </div>
 
