Goede versie 25.09 september

--- a/FunctionalRequirements.html
+++ b/FunctionalRequirements.html
@@ -9,11 +9,16 @@
     <link href="Css/Home.css" rel="stylesheet" type="text/css">
 
     <style>
-table {
+table, th, td {
   table-layout: fixed;
   width: 100%;
   border-collapse: collapse;
-  border: 3px solid purple;
+  border: 2px solid #D81E05;
+  font-family: Calibri;
+}
+
+th{
+font-size: 23px;
 }
 
 thead th:nth-child(1) {
@@ -47,8 +52,8 @@ th, td {
 </div>
 
 <h2><strong>Inloggen</strong></h2>
-<table class="w3-table-all" style="table-layout: fixed">
-    <thead>
+<table>
+<thead>
     <tr>
 
         <th>Req-Nr</th>
@@ -90,7 +95,7 @@ th, td {
     </tbody>
 </table>
 <h2><strong>Gebruikersprofiel</strong></h2>
-<table class="w3-table-all">
+<table>
     <thead>
     <tr>
         <th>Req-Nr</th>
@@ -133,7 +138,7 @@ th, td {
     </tbody>
 </table>
 <h2><strong>Functies voor de gebruikers</strong></h2>
-<table class="w3-table-all">
+<table>
         <thead>
         <tr>
             <th>Req-Nr</th>
@@ -192,7 +197,7 @@ th, td {
     </table>
 
 <h2><strong>Overige</strong></h2>
-<table class="w3-table-all">
+<table>
             <thead>
             <tr>
                 <th>Req-Nr</th>
@@ -231,16 +236,6 @@ th, td {
                 <td>De applicatie zou in staat moeten zijn om statistieken te maken van hoeveel mensen de site
                     bezoeken en contact proberen op te nemen</td>
                 <td>Must</td>
-            </tr>
-            <tr>
-                <td>028</td>
-                <td>De website moet er netjes uitzien en niet te zakelijk</td>
-                <td>Should</td>
-            </tr>
-            <tr>
-                <td>029</td>
-                <td>De applicatie zou het gevoel moeten geven dat het een Corendon website is</td>
-                <td>Should</td>
             </tr>
             </tbody>
         </table>
